Commit_068: Correccion home comunidad

--- a/src/templates/auth/register_user.html
+++ b/src/templates/auth/register_user.html
@@ -21,7 +21,7 @@
       <div class="container_description">
         <p>Bienvenido a Adogcion, una red donde las personas compartimos el mismo amor por los animalitos, 
           aquí encontrarás desde centros de adopcion ya sea para adoptar mascotas o ayudar a la causa, 
-          hasta personas con las que compartirás sobre temás en común sobre estos animalitos.</p>
+          hasta personas con las que compartirás sobre temas en común sobre estos animalitos.</p>
           <br>
         <p><strong>¡Animate a ser parte de esta familia!</strong></p>
       </div>
