--- a/src/static/css/User_Adoption_Center/profile_adoption_center.css
+++ b/src/static/css/User_Adoption_Center/profile_adoption_center.css
@@ -226,6 +226,7 @@ body{
   display: flex;
   justify-content: space-around;
   align-items: center;
+  min-width: 1000px;
 }
 
 .href-personalized {
@@ -264,6 +265,13 @@ body{
 }
 /* -------------------------------------------------------*/
 /*  Publicaciones */
+.vistaPublicacion{
+  /* border: blue solid; */
+  min-width: 1000px;
+  width: 100%;
+}
+
+
 .publicacion{
   /* border: solid purple; */
   border: solid #48d1cc 1px;
@@ -282,6 +290,7 @@ body{
   width: 100%;
 }
 .secPublicaciones{
+  min-width: 1000px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   
@@ -320,4 +329,43 @@ body{
   visibility: hidden;
   /* display: none; */
 }
-/*
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  /* border: solid purple; */
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  width: 160px;
+  z-index: 1;
+  /* border: solid orange; */
+  border: solid #48d1cc 1px;
+  border-radius: 10px;
+  background-color: white;
+  transform: translate(-140px);
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+#icon_cog, #icon_option_publication{
+  font-size: 25px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.delete-button:hover, .edit-button:hover{
+  background-color: #138e8e;
+}
+
+
