Commit_073: Agregador editar/eliminar en perfil persona natural

--- a/src/static/css/User_Adoption_Center/profile_adoption_center.css
+++ b/src/static/css/User_Adoption_Center/profile_adoption_center.css
@@ -330,10 +330,11 @@ body{
   /* display: none; */
 }
 
-
+/* Boton editar publicaciones */
 .dropdown {
   position: relative;
   display: inline-block;
+  cursor: pointer;
   /* border: solid purple; */
 }
 
