--- a/src/templates/auth/register_natural_person.html
+++ b/src/templates/auth/register_natural_person.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="step">
-        <p>Datos de registro</p>
+        <p>Datos de usuario</p>
         <div class="num">
           <span>2</span>
         </div>
