--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -114,7 +114,7 @@
             <label>{{publication.title}}</label>
           </div>
           <div class="contenidoPublicacion">
-            <p>{{publication.description}}</p>
+            <textarea readonly name="" id="" cols="30" rows="6">{{publication.description}}</textarea>
           </div>
         </div>
 
