--- a/src/static/css/User_Natural_Person/profile_natural_person.css
+++ b/src/static/css/User_Natural_Person/profile_natural_person.css
@@ -152,14 +152,22 @@ body{
 .container_publications{
   border: solid;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .type_publication{
   /* border: solid purple; */
-  border-radius: 5%;
+  border: solid #48d1cc 1px;
+  background: #f1fcfb;
+  border-radius: 10px;
   /* background-color: #9df2e9; */
-  margin: 1%;
+  padding: 5%;
+  margin: 5%;
+}
+
+.type_publication:hover {
+  background-color: #9df2e9;
+  transform: scale(1.05); /* Aumenta el tamaño en un 5% */
 }
 
 .miniture_publication{
@@ -197,4 +205,45 @@ body{
   max-height: auto;
   overflow: auto;
   font-size: smaller;
+}
+
+/* Boton editar publicaciones */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  /* border: solid purple; */
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  width: 160px;
+  z-index: 1;
+  /* border: solid orange; */
+  border: solid #48d1cc 1px;
+  border-radius: 10px;
+  background-color: white;
+  transform: translate(-140px);
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+#icon_cog, #icon_option_publication{
+  font-size: 25px;
+}
+
+.delete-button:hover, .edit-button:hover{
+  background-color: #138e8e;
 }
