--- a/src/templates/User_Natural_Person/profile_natural_person.html
+++ b/src/templates/User_Natural_Person/profile_natural_person.html
@@ -62,6 +62,11 @@ Perfil
         <textarea readonly name="naturalperson_description" id="person_description" cols="30"
           rows="10">{{user_information.description}}</textarea>
       </div>
+      
+      <div class="href-edit-full-information" style="display: none;" id="div_edit_information">
+        <a href="{{url_for('view_profile_natural_person.editNaturalPersonInformation',id = user_information.id, name = user_information.name)}}">editar mi información completa</a>
+      </div>
+      
     </div>
   </form>
 
