--- a/src/templates/User_Natural_Person/post/edit_information_person.html
+++ b/src/templates/User_Natural_Person/post/edit_information_person.html
@@ -7,17 +7,36 @@ Perfil
 
 {% block customCSS%}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="{{url_for('static', filename = 'css/User_Natural_Person/post/edit_information_person.css')}}">
+<link rel="stylesheet"
+  href="{{url_for('static', filename = 'css/User_Natural_Person/post/edit_information_person.css')}}">
 
 {% endblock %}
 
 
 <!-- unitest, nosetest -->
 {% block body %}
-<div class="container">
+<form class="container"
+  action="{{url_for('view_profile_natural_person.editNaturalPersonInformation', id = current_user.get_id(), name = current_user.name)}}"
+  method="POST">
+
+  {%if user_information.photo == None%}
   <div class="user-photo-container">
-    <img src="https://s3.getstickerpack.com/storage/uploads/sticker-pack/random-memes/tray_large.png?a7d8b8b61358d427d58d9820b697217b" alt="">
+    <input type="hidden" id="hiddenField" name="hiddenField"><!--URL IMAGEN-->
+    <img id="preview"
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSjFkn9BNFAcHtEC_qqB6dgvYE3HXXTGooTv9m0lxXCMA&s" alt="">
   </div>
+  <div class="uploadphoto">
+    <input type="file" id="upload_photo" name="foto">
+  </div>
+  {%else%}
+  <div class="user-photo-container">
+    <input type="hidden" id="hiddenField" name="hiddenField"><!--URL IMAGEN-->
+    <img id="preview" src="{{user_information.photo}}" alt="">
+  </div>
+  <div class="uploadphoto">
+    <input type="file" id="upload_photo" name="foto">
+  </div>
+  {%endif%}
   <div class="profile-information-container">
     <div class="title-sección">
       <h4>Información personal</h4>
@@ -25,51 +44,69 @@ Perfil
     <div class="person-information-container">
       <div class="input">
         <label for="">Primer Nombre (*)</label>
-        <input type="text" class="form-control" placeholder="Primer Nombre" aria-label="" name="animal_name"
-          value="">
+        <input required type="text" class="form-control" placeholder="Primer Nombre" aria-label="" name="person_first_name"
+          value="{{person_information.first_name}}">
       </div>
       <div class="input">
         <label for="">Segundo Nombre</label>
-        <input type="text" class="form-control" placeholder="Opcional ..." aria-label="" name="animal_name"
+        {%if person_information.middle_name != None %}
+        <input type="text" class="form-control" placeholder="Opcional ..." aria-label="" name="person_middle_name"
+          value="{{person_information.middle_name}}">
+        {%else%}
+        <input type="text" class="form-control" placeholder="Opcional ..." aria-label="" name="person_middle_name"
           value="">
+        {%endif%}
+
       </div>
       <div class="input">
         <label for="">Primer apellido (*)</label>
-        <input type="text" class="form-control" placeholder="Primer apellido" aria-label="" name="animal_name"
-          value="">
+        <input required type="text" class="form-control" placeholder="Primer apellido" aria-label="" name="person_first_surname"
+          value="{{person_information.first_surname}}">
       </div>
       <div class="input">
         <label for="">Segundo apellido</label>
-        <input type="text" class="form-control" placeholder="Opcional ..." aria-label="" name="animal_name"
+        {%if person_information.second_lastname != None %}
+        <input type="text" class="form-control" placeholder="Opcional ..." aria-label="" name="person_second_lastname"
+          value="{{person_information.second_lastname}}">
+        {%else%}
+        <input type="text" class="form-control" placeholder="Opcional ..." aria-label="" name="person_second_lastname"
           value="">
+        {%endif%}
       </div>
       <div class="input">
         <label for="">Tipo de identificación (*)</label>
-        <input type="text" class="form-control" placeholder="Tipo de identificación" aria-label="" name="animal_name"
-          value="">
+        <input readonly type="text" class="form-control" placeholder="Tipo de identificación"
+          style="background-color: darkgray; cursor: not-allowed;" name="person_identification_type"
+          value="{{person_information.identification_type}}">
       </div>
       <div class="input">
         <label for="">Numero de identificación (*)</label>
-        <input type="text" class="form-control" placeholder="Numero de identificación" aria-label="" name="animal_name"
-          value="">
+        <input readonly type="text" class="form-control" placeholder="Numero de identificación"
+          style="background-color: darkgray; cursor: not-allowed;" name="person_identification_number"
+          value="{{person_information.identification_number}}">
       </div>
       <div class="input">
         <label for="">Contacto</label>
-        <input type="text" class="form-control" placeholder="Opcional ..." aria-label="" name="animal_name"
+        {%if person_information.contact != None %}
+        <input type="text" class="form-control" placeholder="Opcional ..." aria-label="" name="person_contact"
+          value="{{person_information.contact}}">
+        {%else%}
+        <input type="text" class="form-control" placeholder="Opcional ..." aria-label="" name="person_contact"
           value="">
+        {%endif%}
       </div>
-      
+
       <div class="input">
         <label for="department">Departamento (*)</label>
-        <select class="form-select" id="person_department" name="person_department" onchange="changeCities()">
-          <option selected disabled>Departamento ...</option>
+        <select class="form-select" id="person_department" name="person_department">
+          <option selected disabled style="display: none;">{{person_information.department}}</option>
         </select>
       </div>
 
       <div class="input">
         <label for="city">Ciudad (*)</label>
         <select class="form-select" id="person_city" name="person_city">
-          <option selected disabled>Ciudad ...</option>
+          <option selected disabled style="display: none;">{{person_information.city}}</option>
         </select>
       </div>
 
@@ -79,8 +116,8 @@ Perfil
     </div>
     <div class="naturalPerson-information-container">
       <label for="city">Descripción</label>
-      <textarea readonly name="naturalperson_description" id="person_description" cols="30"
-          rows="10">Anaconda</textarea>
+      <textarea name="naturalperson_description" id="person_description" cols="30"
+        rows="10">{{user_information.description}}</textarea>
     </div>
 
   </div>
@@ -89,7 +126,7 @@ Perfil
       <i class='bx bx-save'></i> Guardar Cambios
     </button>
   </div>
-</div>
+</form>
 
 {% endblock %}
 
