--- a/src/templates/auth/register_adoption_center.html
+++ b/src/templates/auth/register_adoption_center.html
@@ -76,7 +76,7 @@
               <label for="floatingInput" id="jlApellido2">Segundo apellido</label>
             </div>
             <div class="form-floating campo">
-              <select class="form-select form" name="identification_type" id="tipoDoc">
+              <select required class="form-select form" name="identification_type" id="tipoDoc">
                 <option disabled value="0">Seleccione tipo de documento*</option>
                 <option value="CEDULA DE CIUDADANIA">Cedula de ciudadania</option>
               </select>
@@ -91,24 +91,15 @@
               <label for="floatingInput" id="jlContactoP">Telefono de contacto</label>
             </div>
 
-            <!-- <div class="form-floating campo">
-              <input type="text" class="form-control" name="department" placeholder="Nombre1" id="departamento">
-              <label for="floatingInput" id="jlDepartamento">Departamento</label>
-            </div>
             <div class="form-floating campo">
-              <input type="text" class="form-control" name="city" placeholder="Nombre1" id="ciudad">
-              <label for="floatingInput" id="jlCiudad">Ciudad</label>
-            </div> -->
-
-            <div class="form-floating campo">
-              <select required class="form-select" id="person_department" name="person_department" onchange="changeCities('person_department','person_city')">
-                <option selected disabled>Departamento ...</option>
+              <select class="form-select" id="person_department" name="person_department" onchange="changeCities('person_department','person_city')">
+                <option selected disabled value="">Departamento ...</option>
               </select>
             </div>
       
             <div class="form-floating campo">
-              <select required class="form-select" id="person_city" name="person_city" >
-                <option selected disabled>Ciudad ...</option>
+              <select class="form-select" id="person_city" name="person_city" >
+                <option selected disabled value="">Ciudad ...</option>
               </select>
             </div>
           </div>
@@ -132,36 +123,24 @@
               <label for="floatingInput">Nombre albergue / fundación*</label>
             </div>
             <div class="form-floating campo">
-              <input type="number" class="form-control" name="adoptionCenter_nit">
+              <input required type="text" class="form-control" name="adoptionCenter_nit" id="adoptionCenter_nit">
               <label for="floatingInput">N.I.T</label>
             </div>
             <div class="form-floating campo">
-              <input type="number" class="form-control" name="adoptionCenter_contact" placeholder="Gustavo"
+              <input type="number" class="form-control" name="adoptionCenter_contact" placeholder=""
                 id="contactoAlb">
-              <label for="floatingInput">Numero de contacto*</label>
+              <label for="floatingInput">Numero de contacto</label>
             </div>
-            <!-- <div class="form-floating campo">
-              <input type="text" class="form-control" name="direccionAlb" placeholder="Nombre1" id="direccionAlb">
-              <label for="floatingInput">Direccion</label>
-            </div> -->
-            <!-- <div class="form-floating campo">
-              <input type="text" class="form-control" name="adoptionCenter_department" placeholder="Nombre1"
-                id="departamentoAlb">
-              <label for="floatingInput">Departamento</label>
-            </div>
-            <div class="form-floating campo">
-              <input type="text" class="form-control" name="adoptionCenter_city" placeholder="Nombre1" id="ciudadAlb">
-              <label for="floatingInput">Ciudad</label>
-            </div> -->
+            
             <div class="form-floating campo">
               <select required class="form-select" id="adoptionCenter_department" name="adoptionCenter_department" onchange="changeCities('adoptionCenter_department','adoptionCenter_city')">
-                <option selected disabled>Departamento ...</option>
+                <option selected disabled value="">Departamento ...</option>
               </select>
             </div>
       
             <div class="form-floating campo">
               <select required class="form-select" id="adoptionCenter_city" name="adoptionCenter_city" >
-                <option selected disabled>Ciudad ...</option>
+                <option selected disabled value="">Ciudad ...</option>
               </select>
             </div>
 
