Commit_077: Eliminada validación en el NIT del registro centro de adopción

--- a/src/templates/auth/register_adoption_center.html
+++ b/src/templates/auth/register_adoption_center.html
@@ -123,7 +123,7 @@
               <label for="floatingInput">Nombre albergue / fundación*</label>
             </div>
             <div class="form-floating campo">
-              <input required type="text" class="form-control" name="adoptionCenter_nit" id="adoptionCenter_nit">
+              <input type="text" class="form-control" name="adoptionCenter_nit" id="adoptionCenter_nit">
               <label for="floatingInput">N.I.T</label>
             </div>
             <div class="form-floating campo">
