Commit_078: Corrección en sentencias Bd y algunos nombres

--- a/src/templates/User_Adoption_Center/modal.html
+++ b/src/templates/User_Adoption_Center/modal.html
@@ -63,8 +63,8 @@
                   <input type="number" id="animal_weight" class="form-control editAnimal" placeholder="Peso" aria-label="Peso (kg)" name="animal_weight" readonly>
                 </div>
                 <div class="input-group mb-3">
-                  <span class="input-group-text">Dieta</span>
-                  <textarea id="animal_diet" class="form-control editAnimal" aria-label="diet" name="animal_diet" readonly></textarea>
+                  <span class="input-group-text">Observaciones</span>
+                  <textarea id="animal_observation" class="form-control editAnimal" aria-label="observation" name="animal_observation" readonly></textarea>
                 </div>
                 <div class="input-group mb-3">
                   <span class="input-group-text">Estado</span>
