--- a/src/templates/User_Adoption_Center/post/upload_animal.html
+++ b/src/templates/User_Adoption_Center/post/upload_animal.html
@@ -74,7 +74,7 @@ Nuevo animal
     <!-- Seccion de dieta -->
     <div class="container_animal_diet">
       <div class="container_title_seccion">
-        <h1>Dieta del animal</h1>
+        <h1>Observaciones del animal</h1>
         <p>Agrega en esta sección los alimentos que, estrictamente <strong>debe o no</strong> comer el animal</p>
       </div>
       <div class="input_diet">
